fix: spacing

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -3,7 +3,7 @@
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 15%;
+    padding-top: 12%;
     left: 0;
     top: 0;
     width: 100%;
